zokrates_cli/examples/compile_errors/out_of_bounds_write.zok
def foo(field[1] a) -> field[1] {
    return a;
}

def main(field a) {
    field[1] h = foo([a]);
    h[1] = 1;
    return;
}
